--- a/eProdaja/eProdaja/appsettings.json
+++ b/eProdaja/eProdaja/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "eProdaja": "Data Source=.;Initial Catalog=eProdajaTMPTest; Integrated Security = true"
+  },
   "AllowedHosts": "*"
 }
