--- a/eProdaja/eProdaja/appsettings.json
+++ b/eProdaja/eProdaja/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "eProdaja": "Data Source=.;Initial Catalog=eProdajaTMPTest; Integrated Security = true"
+    "eProdaja": "Data Source=.;Initial Catalog=eProdaja; Integrated Security = true"
   },
   "AllowedHosts": "*"
 }
